# PloidyFrost

./: CMakeLists.txt  README.md
KMC/: CMakeLists.txt
KMC/kmc_api/: CMakeLists.txt  kmer_api.h  kmer_defs.h
bifrost/src/: UnitigMap.hpp
script/: Drawfreq.R  Filter-multi.R  Filter.R  paper_figures.R
script/pipeline/: 1.trim  2.kmc_db  3.filter  4.bifrost  5.ploidy  run-multisample.sh  run.sh
src/: CCDBG.cpp  CCDBG.hpp  CDBG.cpp  CDBG.hpp  GmmModel.cpp  GmmModel.hpp  Main.cpp  MyUnitig.cpp  MyUnitig.hpp  SeqAlign.cpp  SeqAlign.hpp
